--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/jpadb?createTableIfNotExists=true
 spring.datasource.username=root
 spring.datasource.password=Rohit@123
-spring.jpa.hibernate.dbl-auto=update
+spring.jpa.hibernate.ddl-auto=update
+
+
+#
